Update: main - Diff report completed

--- a/diff_USB_energy_refactor.html
+++ b/diff_USB_energy_refactor.html
@@ -10010,7 +10010,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>from plugwise.exceptions </ins>import <ins>(</ins></span>
+            <span class="d2h-code-line-ctn"><ins>from plugwise </ins>import <ins>Smile</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -10021,7 +10021,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    ConnectionFailedError,</span>
+            <span class="d2h-code-line-ctn">from plugwise.exceptions import (</span>
         </div>
     </td>
 </tr><tr>
@@ -10032,7 +10032,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    InvalidAuthentication,</span>
+            <span class="d2h-code-line-ctn">    ConnectionFailedError,</span>
         </div>
     </td>
 </tr><tr>
@@ -10043,7 +10043,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    InvalidSetupError,</span>
+            <span class="d2h-code-line-ctn">    InvalidAuthentication,</span>
         </div>
     </td>
 </tr><tr>
@@ -10054,7 +10054,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    InvalidXMLError,</span>
+            <span class="d2h-code-line-ctn">    InvalidSetupError,</span>
         </div>
     </td>
 </tr><tr>
@@ -10065,7 +10065,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    ResponseError,</span>
+            <span class="d2h-code-line-ctn">    InvalidXMLError,</span>
         </div>
     </td>
 </tr><tr>
@@ -10076,7 +10076,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    UnsupportedDeviceError,</span>
+            <span class="d2h-code-line-ctn">    ResponseError,</span>
         </div>
     </td>
 </tr><tr>
@@ -10087,7 +10087,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">)</span>
+            <span class="d2h-code-line-ctn">    UnsupportedDeviceError,</span>
         </div>
     </td>
 </tr><tr>
@@ -10098,7 +10098,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">from plugwise.smile import Smile</span>
+            <span class="d2h-code-line-ctn">)</span>
         </div>
     </td>
 </tr><tr>
@@ -10674,25 +10674,25 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del">
+    <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">56</div>
-<div class="line-num2"></div>
+<div class="line-num2">45</div>
     </td>
-    <td class="d2h-del">
+    <td class="d2h-cntx">
         <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-prefix">&nbsp;</span>
             <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del">
+    <td class="d2h-code-linenumber d2h-del d2h-change">
       <div class="line-num1">57</div>
 <div class="line-num2"></div>
     </td>
-    <td class="d2h-del">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">CONF_MANUAL_PATH = &quot;Enter Manually&quot;</span>
+            <span class="d2h-code-line-ctn"><del>CONF_MANUAL_PATH</del> <del>=</del> <del>&quot;Enter</del> <del>Manually&quot;</del></span>
         </div>
     </td>
 </tr><tr>
@@ -10751,25 +10751,25 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-cntx">
+    <td class="d2h-code-linenumber d2h-del">
       <div class="line-num1">63</div>
-<div class="line-num2">45</div>
+<div class="line-num2"></div>
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del">
         <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-prefix">-</span>
             <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del d2h-change">
+    <td class="d2h-code-linenumber d2h-del">
       <div class="line-num1">64</div>
 <div class="line-num2"></div>
     </td>
-    <td class="d2h-del d2h-change">
+    <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><del>@callback</del></span>
+            <span class="d2h-code-line-ctn">@callback</span>
         </div>
     </td>
 </tr><tr>
@@ -11165,7 +11165,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>def _base_gw_schema(discovery_info: ZeroconfServiceInfo | None) -&gt; vol.Schema:</ins></span>
+            <span class="d2h-code-line-ctn"><ins>def</ins> <ins>_base_gw_schema(discovery_info:</ins> <ins>ZeroconfServiceInfo</ins> <ins>| None) -&gt; vol.Schema:</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -11389,24 +11389,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-ins d2h-change">
-      <div class="line-num1"></div>
-<div class="line-num2">61</div>
-    </td>
-    <td class="d2h-ins d2h-change">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    <ins>return </ins>base_gw_schema</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-cntx">
+    <td class="d2h-code-linenumber d2h-del">
       <div class="line-num1">111</div>
-<div class="line-num2">62</div>
+<div class="line-num2"></div>
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del">
         <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-prefix">-</span>
             <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
@@ -11422,9 +11411,20 @@
         </div>
     </td>
 </tr><tr>
+    <td class="d2h-code-linenumber d2h-ins d2h-change">
+      <div class="line-num1"></div>
+<div class="line-num2">61</div>
+    </td>
+    <td class="d2h-ins d2h-change">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">    <ins>return </ins>base_gw_schema</span>
+        </div>
+    </td>
+</tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">113</div>
-<div class="line-num2">63</div>
+<div class="line-num2">62</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -11433,13 +11433,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del d2h-change">
+    <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">114</div>
-<div class="line-num2"></div>
+<div class="line-num2">63</div>
     </td>
-    <td class="d2h-del d2h-change">
+    <td class="d2h-cntx">
         <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-prefix">&nbsp;</span>
             <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
@@ -11451,15 +11451,15 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><del>async</del> <del>def</del> <del>validate_gw_input(hass:</del> <del>core</del>.<del>HomeAssistant, data):</del></span>
+            <span class="d2h-code-line-ctn">async def validate_gw_input(hass: <del>core.</del>HomeAssistant, data):</span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del">
+    <td class="d2h-code-linenumber d2h-del d2h-change">
       <div class="line-num1">116</div>
 <div class="line-num2"></div>
     </td>
-    <td class="d2h-del">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
             <span class="d2h-code-line-ctn">    &quot;&quot;&quot;</span>
@@ -11484,7 +11484,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>async def validate_gw_input(hass: HomeAssistant, data: dict[str, Any]) -&gt; Smile:</ins></span>
+            <span class="d2h-code-line-ctn">async def validate_gw_input(hass: HomeAssistant, data<ins>: dict[str, Any]</ins>)<ins> -&gt; Smile</ins>:</span>
         </div>
     </td>
 </tr><tr>
@@ -11495,7 +11495,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>    &quot;&quot;&quot;Validate</ins> <ins>whether</ins> <ins>the</ins> <ins>user input allows us to connect to the gateway</ins>.</span>
+            <span class="d2h-code-line-ctn">    &quot;&quot;&quot;<ins>Validate whether the user input allows us to connect to the gateway.</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -18997,7 +18997,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>codeowners</ins>&quot;: <ins>[</ins>&quot;<ins>@CoMPaTech</ins>&quot;,<ins> &quot;@bouwew&quot;, &quot;@brefra&quot;, &quot;@frenck&quot;],</ins></span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>codeowners</ins>&quot;: <ins>[</ins>&quot;<ins>@CoMPaTech</ins>&quot;,<ins> &quot;@bouwew&quot;, &quot;@frenck&quot;],</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -19074,7 +19074,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.27.5&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.31.0&quot;],</span>
         </div>
     </td>
 </tr><tr>
