Update: add_usb - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -1,10 +1,8 @@
 <html>
         <head>
-                <title>Plugwise beta's (USB/Networked) vs Core progress</title>
+                <title>Plugwise beta Core/beta progress</title>
         </head>
         <body>
-                        <li><a href='beta/index.html'>Plugwise Smile beta</a>
-                        <li><a href='usb-beta/index.html'>Plugwise USB beta</a>
 
                 <p>Active beta-branch vs active HA-core differences</p>
                 <ul>
