--- a/beta/diff_elga_test.html
+++ b/beta/diff_elga_test.html
@@ -25001,7 +25001,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;51&#x2F;31&#x2F;f02ef5b92083473df021afd221220c9ec8438e8b49d4641616ee29d4fdae&#x2F;</del>plugwise<del>-</del>0.<del>27</del>.<del>99a0.tar.gz#plugwise==</del>0<del>.27.99a0</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;51&#x2F;31&#x2F;f02ef5b92083473df021afd221220c9ec8438e8b49d4641616ee29d4fdae&#x2F;</del>plugwise<del>-0.27.99a0.tar.gz#plugwise</del>==0.<del>27</del>.<del>99a0</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -25145,7 +25145,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise<ins>==</ins>0.<ins>31</ins>.0&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<ins>31</ins>.<ins>1</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
