--- a/beta/diff_fix-usb-request-queue.html
+++ b/beta/diff_fix-usb-request-queue.html
@@ -25001,7 +25001,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;29&#x2F;27&#x2F;a6c776968e1e9b764d401c2e2d920b3609f7a07730d30a123a08460251b9&#x2F;</del>plugwise<del>-</del>0.<del>28</del>.<del>0a8.tar.gz#plugwise==</del>0<del>.28.0a8</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;29&#x2F;27&#x2F;a6c776968e1e9b764d401c2e2d920b3609f7a07730d30a123a08460251b9&#x2F;</del>plugwise<del>-0.28.0a8.tar.gz#plugwise</del>==0.<del>28</del>.<del>0a8</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -25145,7 +25145,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise<ins>==</ins>0.<ins>31</ins>.0&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<ins>31</ins>.<ins>1</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
