Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -16,6 +16,8 @@
 
                         <li><a href='diff_pylint.html'>Unified diff core:dev vs beta:origin/pylint</a></li>
 
+                        <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
+
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
