Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -12,7 +12,11 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
+                        <li><a href='diff_31_4.html'>Unified diff core:dev vs beta:origin/31_4</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
+
+                        <li><a href='diff_mixin.html'>Unified diff core:dev vs beta:origin/mixin</a></li>
 
                         <li><a href='diff_pylint.html'>Unified diff core:dev vs beta:origin/pylint</a></li>
 
