--- a/beta/index.html
+++ b/beta/index.html
@@ -20,6 +20,8 @@
 
                         <li><a href='diff_pylint.html'>Unified diff core:dev vs beta:origin/pylint</a></li>
 
+                        <li><a href='diff_ruff_fix.html'>Unified diff core:dev vs beta:origin/ruff_fix</a></li>
+
                         <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
 
                 </ul>
