Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -18,6 +18,10 @@
 
                         <li><a href='diff_mixin.html'>Unified diff core:dev vs beta:origin/mixin</a></li>
 
+                        <li><a href='diff_prepare_typing2.html'>Unified diff core:dev vs beta:origin/prepare_typing2</a></li>
+
+                        <li><a href='diff_tryout.html'>Unified diff core:dev vs beta:origin/tryout</a></li>
+
                         <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
 
                 </ul>
