Update: main - Diff report completed

--- a/beta/diff.html
+++ b/beta/diff.html
@@ -18241,7 +18241,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        data: PlugwiseData = {&quot;gateway&quot;: {}, &quot;devices&quot;: {}}</span>
+            <span class="d2h-code-line-ctn">        data = PlugwiseData(gateway={}, devices={})</span>
         </div>
     </td>
 </tr><tr>
