--- a/beta/diff_main.html
+++ b/beta/diff_main.html
@@ -16767,7 +16767,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        data: PlugwiseData = {&quot;gateway&quot;: {}, &quot;devices&quot;: {}}</span>
+            <span class="d2h-code-line-ctn">        data = PlugwiseData(gateway={}, devices={})</span>
         </div>
     </td>
 </tr><tr>
