Update: main - Diff report completed

--- a/beta/diff_prepare_typing2.html
+++ b/beta/diff_prepare_typing2.html
@@ -34427,18 +34427,18 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      84
+    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
+      
     </td>
-    <td class="d2h-del d2h-change">
-        <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">          &quot;off&quot;: &quot;<del>Off</del>&quot;,</span>
+    <td class="d2h-cntx d2h-emptyplaceholder">
+        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      85
+      84
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -34448,7 +34448,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      86
+      85
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
@@ -34458,12 +34458,22 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      87
+      86
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">          &quot;comfort&quot;: &quot;<del>Comfort</del>&quot;</span>
+            <span class="d2h-code-line-ctn">          &quot;comfort&quot;: &quot;<del>Comfort</del>&quot;<del>,</del></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-del">
+      87
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">          &quot;off&quot;: &quot;Off&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -36741,13 +36751,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
+    <td class="d2h-code-side-linenumber d2h-ins">
       85
     </td>
-    <td class="d2h-ins d2h-change">
+    <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">          &quot;off&quot;: &quot;<ins>[%key:common::state::off%]</ins>&quot;,</span>
+            <span class="d2h-code-line-ctn">          &quot;off&quot;: &quot;[%key:common::state::off%]&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -36778,6 +36788,16 @@
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
             <span class="d2h-code-line-ctn">          &quot;comfort&quot;: &quot;<ins>[%key:component::climate::entity_component::_::state_attributes::preset_mode::state::comfort%]</ins>&quot;</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
+      
+    </td>
+    <td class="d2h-cntx d2h-emptyplaceholder">
+        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
