--- a/beta/index.html
+++ b/beta/index.html
@@ -18,6 +18,8 @@
 
                         <li><a href='diff_mixin.html'>Unified diff core:dev vs beta:origin/mixin</a></li>
 
+                        <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
+
                         <li><a href='diff_prepare_typing2.html'>Unified diff core:dev vs beta:origin/prepare_typing2</a></li>
 
                         <li><a href='diff_tryout.html'>Unified diff core:dev vs beta:origin/tryout</a></li>
