--- a/beta/diff_pre_0_34_11.html
+++ b/beta/diff_pre_0_34_11.html
@@ -23016,7 +23016,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;f8&#x2F;67&#x2F;f19edec909a61b6d7ce6df4798ad674e431964638380ccf9239ebf32bec9&#x2F;</del>plugwise<del>-0.31.5a3.tar.gz#plugwise</del>==0.31.<del>5a3</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;e0&#x2F;8a&#x2F;b52a039f503d6d076c6757c059bd6e9dba6cdd8c6a14dab5e4e8a64e07ef&#x2F;</del>plugwise<del>-0.31.5a4.tar.gz#plugwise</del>==0.31.<del>5a4</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -23026,7 +23026,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>34</del>.<del>11a2</del>&quot;</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>34</del>.<del>11a3</del>&quot;</span>
         </div>
     </td>
 </tr><tr>
