--- a/beta/index.html
+++ b/beta/index.html
@@ -22,6 +22,8 @@
 
                         <li><a href='diff_prepare_typing2.html'>Unified diff core:dev vs beta:origin/prepare_typing2</a></li>
 
+                        <li><a href='diff_renovate/actions-checkout-3.x.html'>Unified diff core:dev vs beta:origin/renovate/actions-checkout-3.x</a></li>
+
                         <li><a href='diff_tryout.html'>Unified diff core:dev vs beta:origin/tryout</a></li>
 
                         <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
