Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -14,6 +14,8 @@
 
                         <li><a href='diff_31_4.html'>Unified diff core:dev vs beta:origin/31_4</a></li>
 
+                        <li><a href='diff_fix-missing-wishdoc.html'>Unified diff core:dev vs beta:origin/fix-missing-wishdoc</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
