Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -26,6 +26,8 @@
 
                         <li><a href='diff_tryout.html'>Unified diff core:dev vs beta:origin/tryout</a></li>
 
+                        <li><a href='diff_typing_suggestion.html'>Unified diff core:dev vs beta:origin/typing_suggestion</a></li>
+
                         <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
 
                 </ul>
