Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -14,11 +14,15 @@
 
                         <li><a href='diff_31_4.html'>Unified diff core:dev vs beta:origin/31_4</a></li>
 
+                        <li><a href='diff_housekeeping.html'>Unified diff core:dev vs beta:origin/housekeeping</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
 
                         <li><a href='diff_mixin.html'>Unified diff core:dev vs beta:origin/mixin</a></li>
+
+                        <li><a href='diff_pre-31-9.html'>Unified diff core:dev vs beta:origin/pre-31-9</a></li>
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
