Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -28,6 +28,8 @@
 
                         <li><a href='diff_various-impr.html'>Unified diff core:dev vs beta:origin/various-impr</a></li>
 
+                        <li><a href='diff_various-impr-branch.html'>Unified diff core:dev vs beta:origin/various-impr-branch</a></li>
+
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
