Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -12,8 +12,6 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
-                        <li><a href='diff_31_4.html'>Unified diff core:dev vs beta:origin/31_4</a></li>
-
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
@@ -22,7 +20,7 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
-                        <li><a href='diff_tryout.html'>Unified diff core:dev vs beta:origin/tryout</a></li>
+                        <li><a href='diff_pw-0.32.1.html'>Unified diff core:dev vs beta:origin/pw-0.32.1</a></li>
 
                         <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
 
