Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -26,6 +26,8 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
+                        <li><a href='diff_renovate/pre-commit-pre-commit-hooks-4.x.html'>Unified diff core:dev vs beta:origin/renovate/pre-commit-pre-commit-hooks-4.x</a></li>
+
                         <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
 
                 </ul>
