Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -14,6 +14,8 @@
 
                         <li><a href='diff_improve-reg-clean.html'>Unified diff core:dev vs beta:origin/improve-reg-clean</a></li>
 
+                        <li><a href='diff_improve_clean.html'>Unified diff core:dev vs beta:origin/improve_clean</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
