Update: main - Diff report completed

--- a/beta/diff.html
+++ b/beta/diff.html
@@ -29643,7 +29643,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;<del>[%key:component::lock::entity_component::_::name%]</del>&quot;</span>
+            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;<del>[%key:component::lock::title%]</del>&quot;</span>
         </div>
     </td>
 </tr><tr>
