--- a/beta/diff_value_fn.html
+++ b/beta/diff_value_fn.html
@@ -38412,7 +38412,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;[%key:component::lock::entity_component::_::name%]&quot;</span>
+            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;[%key:component::lock::title%]&quot;</span>
         </div>
     </td>
 </tr><tr>
