--- a/beta/diff_migrate_max_dhw_temp.html
+++ b/beta/diff_migrate_max_dhw_temp.html
@@ -37442,7 +37442,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;<ins>[%key:component::lock::entity_component::_::name%]</ins>&quot;</span>
+            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;<ins>[%key:component::lock::title%]</ins>&quot;</span>
         </div>
     </td>
 </tr><tr>
