Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -32,6 +32,8 @@
 
                         <li><a href='diff_pw_33_1.html'>Unified diff core:dev vs beta:origin/pw_33_1</a></li>
 
+                        <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
+
                         <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
 
                 </ul>
